src/test/resources/frontendReference/invalid/semanticErr/class/inheritance/overrideTwice.waccast
-- Compiling...
Errors detected during compilation! Exit code 200 returned.
Semantic Error at 23:4 -- Function 'f' was already defined in this scope.